<resources>
    <string name="app_name">ColorMyView</string>
    <string name="box_top">I\'m at the top box!</string>
    <string name="box_big">I\'m a big box!</string>
    <string name="box_sibling">I\'m your brother!</string>
    <string name="box_pal">Hi pal!</string>
    <string name="box_bottom">I\'m at the bottom</string>
    <string name="label_text">how to play:</string>
    <string name="tab_info">Tab the boxes to change colors</string>
    <string name="button_red">red</string>
    <string name="button_blue">blue</string>
    <string name="button_green">green</string>
</resources>
